# stakedex-sdk

./: Cargo.toml
cli/srlut/src/subcmd/: extend.rs  init.rs
common/src/: consts.rs  deposit_sol.rs  pool_pair.rs
interfaces/stakedex_interface/src/: instructions.rs
jup_interface/src/pool_pair/: common.rs  one_way.rs  prefund.rs  two_way.rs
jup_interface/src/pool_sol/: deposit_sol.rs
libs/eversol_stake_pool/src/: lib.rs  stakedex_traits.rs
libs/eversol_stake_pool/src/stakedex_traits/: base.rs  deposit_sol.rs  deposit_stake.rs  withdraw_stake.rs
libs/lido/src/stakedex_traits/: deposit_sol.rs  withdraw_stake.rs
libs/marinade/src/: lib.rs
libs/marinade/src/stakedex_traits/: deposit_sol.rs  deposit_stake.rs
libs/socean_stake_pool/src/: stakedex_traits.rs
libs/socean_stake_pool/src/stakedex_traits/: deposit_sol.rs  deposit_stake.rs  withdraw_stake.rs
libs/spl_stake_pool/: Cargo.toml
libs/spl_stake_pool/src/: lib.rs  stakedex_traits.rs
libs/spl_stake_pool/src/stakedex_traits/: base.rs  deposit_sol.rs  deposit_stake.rs  withdraw_stake.rs
libs/unstake_it/: Cargo.toml
libs/unstake_it/src/: lib.rs  stakedex_traits.rs
libs/unstake_it/src/stakedex_traits/: base.rs  deposit_stake.rs
stakedex_sdk/: Cargo.toml
stakedex_sdk/src/: lib.rs
stakedex_sdk/tests/: test_main.rs
