[workspace]
resolver = "2"

members = [
    "cli/*",
    "common",
    "interfaces/*",
    "jup_interface",
    "libs/*",
    "stakedex_sdk",
]

[workspace.dependencies]
anyhow = "^1.0"
bincode = "^1.0"
borsh = "1"
clap = "^3"
itertools = ">=0.1"
jupiter-amm-interface = "~0.4.6"
lazy_static = "^1.0"
# set git dependencies to branch instead of locking to rev so that consumers can upgrade easily
lido = { git = "https://github.com/jup-ag/solido", rev = "0ab9a8145402ac0b2fe70ebe304c9f1c231bcb8d", features = ["no-entrypoint"] } # rev = "ec25a9b"
marinade_finance_interface = { git = "https://github.com/jup-ag/marinade_finance_interface", rev = "51ee4b4d4bd037da2964acc11c65d8d3e520c824" } # rev = "4d1895b"
num-derive = ">=0.1"
num-traits = ">=0.1"
rand = "0.8.5"
rust_decimal = "1.36" # anything >1.32 uses borsh ^1
sanctum-macros = { git = "https://github.com/jup-ag/sanctum-macros.git", rev = "7f2defa7c72aebea24b4bb4d2076ce8c0765086d" }
serde = "^1"
serde_json = "^1"
spl-associated-token-account = { version = ">=5", features = ["no-entrypoint"] }
spl-math = { version = "0.3.0" }
spl-stake-pool = { version = "^2", features = ["no-entrypoint"] }
spl-token = ">=5.0"
thiserror = "^1.0"
tokio = "^1.0"
unstake_interface = { git = "https://github.com/jup-ag/sanctum-unstake-program.git", rev = "adbaccd0693992527e4fd8644e0d48e156693f9a" }
unstake-lib = { git = "https://github.com/jup-ag/sanctum-unstake-program.git", rev = "adbaccd0693992527e4fd8644e0d48e156693f9a" }

# sanctum solana utils
sanctum-solana-cli-utils = { git = "https://github.com/jup-ag/sanctum-solana-utils.git", rev = "266d745c4d6d66041030d8315fcea41a916680fd" } # rev = "111f01"

# sanctum-lst-list
# keep branch = "master" for flexibility of downstream crates
sanctum-lst-list = { git = "https://github.com/jup-ag/sanctum-lst-list.git", rev="9feccf7ac1dca9394006a249e3b979761baac007" } # rev = ebecde4

# solana core crates
solana-program = "~2.0"
solana-sdk = "~2.0"
solana-account-decoder = "~2.0"
solana-client = "~2.0"

# workspace members
stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_interface" }
stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
stakedex_interface = { path = "./interfaces/stakedex_interface" }
stakedex_jup_interface = { path = "./jup_interface" }
stakedex_lido = { path = "./libs/lido" }
stakedex_marinade = { path = "./libs/marinade" }
stakedex_sdk_common = { path = "./common" }
stakedex_spl_stake_pool = { path = "./libs/spl_stake_pool" }
stakedex_unstake_it = { path = "./libs/unstake_it" }
stakedex_withdraw_stake_interface = { path = "./interfaces/stakedex_withdraw_stake_interface" }
